--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
 	"dependencies": {
 		"@react-input/mask": "^1.2.5",
 		"body-parser": "^1.20.3",
+		"bootstrap": "^5.3.3",
 		"cors": "^2.8.5",
 		"express": "^4.21.1",
+		"flowbite-react": "^0.10.2",
 		"nodemailer": "^6.9.16",
 		"react": "^18.3.1",
+		"react-bootstrap": "^2.10.7",
 		"react-dom": "^18.3.1",
 		"react-hook-mask": "^1.1.18",
 		"react-icons": "^5.3.0",
-		"react-router-dom": "^6.26.1",
+		"react-intersection-observer": "^9.13.1",
+		"react-router-dom": "^6.28.2",
 		"react-router-hash-link": "^2.4.3",
 		"react-slick": "^0.30.2",
 		"react-text-mask": "^5.5.0",
