--- a/package.json
+++ b/package.json
@@ -16,16 +16,19 @@
 		"cors": "^2.8.5",
 		"express": "^4.21.1",
 		"flowbite-react": "^0.10.2",
+		"framer-motion": "^12.6.3",
+		"next": "^15.2.1",
 		"nodemailer": "^6.9.16",
 		"react": "^18.3.1",
 		"react-bootstrap": "^2.10.7",
 		"react-dom": "^18.3.1",
+		"react-helmet": "^6.1.0",
 		"react-hook-mask": "^1.1.18",
 		"react-icons": "^5.3.0",
 		"react-intersection-observer": "^9.13.1",
 		"react-router-dom": "^6.28.2",
 		"react-router-hash-link": "^2.4.3",
-		"react-slick": "^0.30.2",
+		"react-slick": "^0.30.3",
 		"react-text-mask": "^5.5.0",
 		"react-toastify": "^10.0.5",
 		"slick-carousel": "^1.8.1"
